// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rule Password Render Rule Password 1`] = `
<Styled(styled.li)
  error={false}
  id=""
>
  Teste
   
  
</Styled(styled.li)>
`;

exports[`Rule Password Render error 1`] = `
<Styled(styled.li)
  error={true}
  id=""
>
  Teste
   
  <Icon
    name="nocheck-input"
  />
</Styled(styled.li)>
`;
